Really basic tic tac toe game

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,7 @@
+.container {
+    text-align: center;
+}
+
 body {
     background-color: #2caef3;
     font-family: Arial;
@@ -8,6 +12,12 @@ body {
     top: 0; left: 0; right: 0; bottom: 0;
 }
 
+h1 {
+    text-align: center;
+    top: 0; left: 0; right: 0; bottom: 100px;
+    color: black;
+    margin: auto;
+}
 table {
     position: absolute;
     border: 1px solid #000;
@@ -39,8 +49,8 @@ button#start {
     color: black;
     font-family: Arial;
     font-weight: 700;
-    width: 80px;
-    height: 35px;
+    width: 150px;
+    height: 100px;
     top: 0; left: 0; right: 0; bottom: 0;
 
 }
